--- a/static/css/normalUserInfoCheckTemplate.scss
+++ b/static/css/normalUserInfoCheckTemplate.scss
@@ -6,3 +6,10 @@ div#others{
 input#id_user_warn_count{
     width:40px;
 }
+#reviews{
+}
+#reviews_div{
+    height:100%;
+    width:100%;
+    overflow-y:scroll;
+}
