--- a/static/css/normalUserInfoCheckTemplate.css
+++ b/static/css/normalUserInfoCheckTemplate.css
@@ -6,4 +6,10 @@ input#id_user_warn_count {
   width: 40px;
 }
 
+#reviews_div {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+}
+
 /*# sourceMappingURL=normalUserInfoCheckTemplate.css.map */
