--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -35,7 +35,7 @@
     </p>
 </div>
 
-<div style="word-spacing:15px; float:right; margin : 2.98vh;" id="reviews_div">
+<div style="word-spacing:15px; float:right; margin : 2.98vh; height:50.6%">
     <div style="display: inline-block;">
         <select id="sort_select_box" name="sort_select_box" onchange="sort()">
             <option value="1">최신 순</option>
@@ -53,33 +53,35 @@
         <button onclick="location.href='/normal_user_review_write_page'"
                 style="cursor: pointer;  background-color: white;">리뷰 작성</button>
     </div>
-    <div style="margin : 15vh;" id="reviews">
-        {% for review in reviews %}
-            <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
-                <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
-                    {% if review.additionalImage %}
-                        <img style= "height: 12vh; width :6.8vw;" class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}">
-                    {% endif %}
+    <div id="reviews_div">
+        <div style="margin : 15vh;" id="reviews">
+            {% for review in reviews %}
+                <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
+                    <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
+                        {% if review.additionalImage %}
+                            <img style= "height: 12vh; width :6.8vw;" class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}">
+                        {% endif %}
+                    </div>
+                    <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
+            {#                리뷰 제목 #}
+                            최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
+                    <span style = "float : right;">
+            {#            추천 수 데이터 #}
+                        추천 수 {{ review.recommendedOn|length }}</span>
+                    <div style = "color: #ECECEC;">&ensp;
+            {#            리뷰 내용 데이터 #}
+                        리뷰내용 -> {{ review.reviewSentence }}</div>
+                    <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
+            {#            리뷰별 아이콘 데이터 목록 #}
+                        {% if review.includedIcon %}
+                            {% for icon in review.includedIcon %}
+                                <img src="{% static 'images/iconImage/' %}{{ icon }}">
+                            {% endfor %}
+                        {% endif %}
+                    </span>
                 </div>
-                <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
-        {#                리뷰 제목 #}
-                        최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
-                <span style = "float : right;">
-        {#            추천 수 데이터 #}
-                    추천 수 {{ review.recommendedOn|length }}</span>
-                <div style = "color: #ECECEC;">&ensp;
-        {#            리뷰 내용 데이터 #}
-                    리뷰내용 -> {{ review.reviewSentence }}</div>
-                <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
-        {#            리뷰별 아이콘 데이터 목록 #}
-                    {% if review.includedIcon %}
-                        {% for icon in review.includedIcon %}
-                            <img src="{% static 'images/iconImage/' %}{{ icon }}">
-                        {% endfor %}
-                    {% endif %}
-                </span>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
 </div>
 <script>
