--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -43,11 +43,16 @@
         <div id="reviewInfo">
             <div id="room_images" class="content col-5"
                  style="display:inline-block; float:left; height:200px; border:1px solid black;">
+            {% if review.additionalImage %}
                 <div class="slider" id="famous" onclick="">
                     {% for reviewimg in review.additionalImage %}
                         <img src="{% static 'images/' %}{{ reviewimg }}" style="height:100% ; width:100%;">
                     {% endfor %}
                 </div>
+            {% else %}
+                <div>등록된 사진이 없습니다</div>
+            {% endif %}
+
             </div>
 
             <div class="content col-5" style="display:inline-block; float:left; height:200px; border:1px solid black;">
@@ -89,14 +94,21 @@
         </div>
         <div id="icon">
             <h1>아이콘</h1>
-            {% for i in icons %}
-                <a onclick="selectIcon(this)">
-                    <img src="{% static i.iconKind %}">
-                    <input type="text" hidden value="{{ i.iconInformation }}">
-                    <input type="text" hidden value="{% static i.iconKind %}">
-                    <input type="text" hidden value="{% static i.changedIconKind %}">
-                </a>
-            {% endfor %}
+{#            {% for i in icons %}#}
+{#                <a onclick="selectIcon(this)">#}
+{#                    <img src="{% static i.iconKind %}">#}
+{#                    <input type="text" hidden value="{{ i.iconInformation }}">#}
+{#                    <input type="text" hidden value="{% static i.iconKind %}">#}
+{#                    <input type="text" hidden value="{% static i.changedIconKind %}">#}
+{#                </a>#}
+{#            {% endfor %}#}
+            {% if review.includedIcon %}
+                {% for icon in review.includedIcon %}
+                    <img src="{% static 'images/iconImage/' %}{{ icon }}" onclick="selectIcon2(this)">
+                {% endfor %}
+            {% else %}
+                <div>아이콘이 없습니다.</div>
+            {% endif %}
         </div>
         <div id="same_room_reviews">
             <!-같은 원룸의 리뷰들 목록-->
@@ -115,6 +127,13 @@
         });
     </script>
     <script type="text/javascript">
+
+    // icon 이미지 <-> selected icon 이미지 변환 함수
+    // 만들 예정
+    function selectIcon2(e){
+        alert("아이콘 클릭 이벤트 발생")
+    }
+
         document.getElementById('mapDiv').style.width = '80%';
         document.getElementById('mapDiv').style.height = '500px';
         document.getElementById('mapDiv').style.minWidth = '960px';
