--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -16,23 +16,32 @@
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
 <div id="infoCheckAndUpdate" style="height:29.7%; outline: darkred 2px solid">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
-    <h1>회원 정보 설정</h1>
+    <h1>회원 정보</h1>
     <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
         {% csrf_token %}
-        <table>
-            {{userForm.as_table}}
-        </table>
+        <div> {# 닉네임은 성,이름으로 대체 #}
+            {{ user.last_name }} {{ user.first_name }} 님
+        </div>
+        <div>
+            {{ user.email }}
+        </div>
+        <div>
+            마지막 로그인 일시 {{ user.last_login }}
+        </div>
+        <div>
+            가입일 {{ user.date_joined }}
+        </div>
+        <div>
+            활동 상태 {{ user|check_active }}
+        </div>
+        <div>
+            경고 횟수 {{ user.uWarnCount }}회
+        </div>
         <div style="float:right;">
             <input type="submit" value="변경하기">
             <button type="button">탈퇴하기</button>
         </div>
     </form>
-    <p>
-        활동 상태 : <span>{{user|check_active}}</span>
-    </p>
-    <p>
-        경고 횟수 : <span>{{user.uWarnCount}}</span>회
-    </p>
 </div>
 
 <div style="word-spacing:15px; float:right; margin : 2.98vh;" id="reviews_div">
