상단 원룸등록 메뉴: 원룸 등록 페이지 생성, 링크 연결

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
 {% url 'wroteReviews' as wroteReviews %}
 {% url 'introduction' as introduction %}
+{% url 'roomWrite' as roomWrite %}
 
 <!DOCTYPE html>
 <html lang="en">
