--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -21,7 +21,7 @@
         </div>
         <div id="room_sub" class="drpd-content">
             <div id="room_search" class="drpd-sub" onclick="window.location.replace('{{normalUserRoomSearch}}')">원룸 검색</div>
-            <div id="room_add" class="drpd-sub">원룸 등록</div>
+            <div id="room_add" class="drpd-sub" onclick="window.location.replace('{{ roomWrite }}')">원룸 등록</div>
         </div>
     </div>
 </div>
