--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -117,4 +117,9 @@ div#written_date_selects_div {
   color: #A23355;
 }
 
+.icon {
+  width: 60.7%;
+  height: 100%;
+}
+
 /*# sourceMappingURL=normalUserReviewSearchTemplate.css.map */
