--- a/static/css/normalUserReviewListTemplate.css
+++ b/static/css/normalUserReviewListTemplate.css
@@ -5,15 +5,15 @@ a.link-secondary {
 }
 
 #reviews_div {
-  height: 89.39%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  height: 100%;
 }
 
 #reviews {
+  margin-right: 5px;
   margin-left: 6.25%;
-  margin-right: 21.47%;
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #reviews_div::-webkit-scrollbar {
@@ -68,6 +68,7 @@ a.link-secondary {
 .review_icons {
   width: 100%;
   height: 30.77%;
+  margin-right: 1.151%;
   overflow-y: hidden;
   overflow-x: scroll;
 }
