--- a/static/css/normalUserReviewListTemplate.scss
+++ b/static/css/normalUserReviewListTemplate.scss
@@ -3,15 +3,16 @@ a.link-secondary {
   font-weight: bold;
   text-decoration: none;
 }
-#reviews_div{
-  height:89.39%;
+#reviews_div {
+  height: 100%;
+}
+
+#reviews{
+  margin-right:5px;
+  margin-left:6.25%;
+  height:100%;
   overflow-y:scroll;
   overflow-x:hidden;
-}
-#reviews{
-  margin-left:6.25%;
-  margin-right:21.47%;
-  height:100%;
 }
 #reviews_div::-webkit-scrollbar{
   width:18px;
@@ -57,6 +58,7 @@ a.link-secondary {
 .review_icons{
   width:100%;
   height:30.77%;
+  margin-right: 1.151%;
   overflow-y:hidden;
   overflow-x:scroll;
 }
