--- a/templates/normal_user_room_read.html
+++ b/templates/normal_user_room_read.html
@@ -1,21 +1,148 @@
 {% extends 'normal_user_review_list.html' %}
-{% load static %}
+{% load index static %}
 {% block info %}
     <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
-    <div style = "text-align:left; padding: 2.1% 1.7% 2.1% 1.7%; height: 27.1vh; ">
-        <img class="left-side-room-img" style= "float : left; display: block; height: 23.7vh; width :14.8vw; min-height:142.2px; min-width:177.6px" src="{% static 'images/' %}1.png">
-        <div id="room_map" style="height:23.7vh; width: 41.9vw; min-height:142.2px; min-width:502.8px"></div>
-        <div style ="font-size : 25px;">
-            <strong><span><br>주소:</span><span>{{ room.address }}</span></strong>
+    <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ javakey|java_key }}&libraries=services&autoload=true"></script>
+<div id="reviewinfo" >
+    <div style ="margin:20px;">
+        <div style="width:24.7%; height:245px; margin-right:20px; display: inline-block;float:left;">
+                <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
         </div>
-        <div>
-            <span><br>건축연도 : </span><span>{{ room.builtYear }}</span>
-        </div>
-        <div>
-            <span> 층수 :</span><span>{{ room.commonInfo }}</span>
-        </div>
-        <div>
-            <span> 옵션 : </span><span> </span>
+        <div id="mapDiv" style = "display:inline-block;"></div>
+        <script type="text/javascript" src="{% static 'js/normalUserReviewReadTemplate.js' %}"></script>
+        <script>
+            $(document).ready(function () {
+                var a = $('.slider').bxSlider({
+                    {#maxSlides:4,#}
+                    infiniteLoop: false,
+                    touchEnabled: false,
+                });
+            });
+        </script>
+        <script type="text/javascript">
+
+        // icon 이미지 <-> selected icon 이미지 변환 함수
+        // 만들 예정
+        function selectIcon2(e){
+            alert("아이콘 클릭 이벤트 발생")
+        }
+
+            document.getElementById('mapDiv').style.width = '71%';
+            document.getElementById('mapDiv').style.height = '245px';
+            document.getElementById('mapDiv').style.minWidth = '71%';
+            var mapContainer = document.getElementById('mapDiv'), // 지도를 표시할 div
+                mapOption = {
+                    center: new kakao.maps.LatLng(36.628064331494166, 127.45600280223212), // 지도의 중심좌표
+                    level: 5 // 지도의 확대 레벨
+                };
+
+            // 지도 생성
+            function resizeMap() {
+                var mapContainer = document.getElementById('map');
+                mapContainer.style.width = document.getElementById('mainDiv').style.width;
+            }
+
+            var map = new kakao.maps.Map(mapContainer, mapOption);
+
+            {# 지도에 원룸 위치 표시 #}
+            var geocoder = new kakao.maps.services.Geocoder();
+
+            $.ajax({
+                url: 'http://127.0.0.1:8000/db/room/',
+                method: "GET",
+                dataType: "json"
+            })
+                .done(function (json) {
+                    $.each(json, function (key, value) {
+                        // 주소로 좌표를 검색합니다
+                        geocoder.addressSearch(value.address, function (result, status) {
+
+                            // 정상적으로 검색이 완료됐으면
+                            if (status === kakao.maps.services.Status.OK) {
+                                var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+                                // 결과값으로 받은 위치를 마커로 표시합니다
+                                var marker = new kakao.maps.Marker({
+                                    map: map,
+                                    position: coords
+                                });
+
+                                var room_info = ''
+                                if (value.name !== null)
+                                    room_info = value.name
+                                else
+                                    room_info = value.address
+
+                                // 인포윈도우로 장소에 대한 설명을 표시합니다
+                                var infowindow = new kakao.maps.InfoWindow({
+                                    content: '<div style="width:150px;text-align:center;padding:6px 0;">' + room_info + '</div>'
+                                });
+
+                                infowindow.open(map, marker);
+                            }
+                        })
+                    })
+                });
+        </script>
+    </div>
+    <div id ="mid"style = "text-align:center;outline:2px solid #B3B3B3;width:100%; height:11.1%;">
+        <strong><span>주소:</span><span>{{ room.address }}</span></strong>
+        <br>{{ room.builtYear }} {{ room.commonInfo }}
+    </div>
+    <div style="width:100%; height:56%;">
+        <div style="width:100%; height:56%;"></div><div id="reviews_div">
+    <div id="util" style="display:block;">
+        <div style="display:flex; justify-content: right; margin: 1.7% 6.25% auto auto;">
+            <div style="display: inline-block;padding-right: 2%;">
+                <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+                    <option value="1">최신 순</option>
+                    {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+                    <option value="2">추천 순</option>
+                    {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+                    <option value="3">정확도 순</option>
+                    {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+                </select>
+            </div>
+            <div>
+                <button onclick="location.href='/normal_user_review_write_page'"
+                        style=" cursor: pointer;  background-color: white;">리뷰 작성</button>
+            </div>
         </div>
     </div>
+    <div id="reviews" style="display:block;">
+        {% for review in reviews %}
+            <div style="border: 3px; margin: 1.86% 6.25% 1.86% 6.25%; line-height: 2.8vh;height: 20vh;" >
+                <div style= "background-color:#0dcaf0;height: 68.4%; width :15.2%; display:inline-block; float:left;">
+                    {% if review.additionalImage %}
+                        <img style= "height:100%; width :100%;" class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}">
+                    {% endif %}
+                </div>
+                <span style="font-weight:600;font-size: 23px; line-height: 5vh;">&ensp;
+        {#                리뷰 제목 #}
+                        최신 리뷰 제목 -> {{ review.reviewTitle }}</span>
+                <span style = "float : right; padding-top: 1%;">
+        {#            추천 수 데이터 #}
+                    추천 수 {{ review.recommendedOn|length }}</span>
+                <div style = "color: #ECECEC; padding-left: 16%;">&ensp;
+        {#            리뷰 내용 데이터 #}
+                      리뷰내용 -> {{ review.reviewSentence }}</div>
+                <span style = " letter-spacing : 1vw; position: relative; right:2.5%;">&ensp;
+        {#            리뷰별 아이콘 데이터 목록 #}
+                    {% if review.includedIcon %}
+                        {% for icon in review.includedIcon %}
+                            <img src="{% static 'images/iconImage/' %}{{ icon }}">
+                        {% endfor %}
+                    {% endif %}
+                </span>
+            </div>
+        {% endfor %}
+    </div>
+</div>
+    </div>
+</div>
 {% endblock %}
