--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -100,8 +100,8 @@
 {% endblock %}
 {% block info %}
 <div style ="border-bottom: solid 2px #B3B3B3 ; width:100%; height:10.6% ;padding:3.47% 8.854% 0.5% 6.07%;">
-	    <input type="text"style="width: 60.7%; height:100%;" placeholder="검색어 입력">
-	    <button style = "width: 5.2%; height:100%;">검</button>
+	    <input type="search"style="  border-radius: 5px; width: 60.7%; height:100%;" placeholder="검색어 입력">
+	    <span type ="icon" class ="icon"><i class="fa fa-search"></i></span>
 
     <div style="word-spacing:15px; float:right; ">
         <div style="display: inline-block;">
