--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -17,7 +17,7 @@
 <div id="infoCheckAndUpdate" style="height:29.7%; outline: darkred 2px solid">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
     <div style="float: right">
-        <button id="withdrawal">회원탈퇴</button>
+        <button id="withdrawal" value="{{ user.id }}">회원탈퇴</button>
     </div>
 
     <h1>회원 정보</h1>
@@ -63,7 +63,7 @@
             </div>
             <div style="float:right;">
                 <input id="changeBtn" type="submit" value="변경하기">
-                <button id="cancle">취소하기</button>
+                <button id="cancel">취소하기</button>
             </div>
         </form>
     </div>
@@ -160,7 +160,7 @@
             document.getElementById("input_form").hidden = false
             document.getElementById("infoData").hidden = true
     }, false);
-    document.getElementById("cancle")
+    document.getElementById("cancel")
         .addEventListener("click", () => {
             document.getElementById("input_form").hidden = true
             document.getElementById("infoData").hidden = false
@@ -169,15 +169,33 @@
     document.getElementById("withdrawal")
         .addEventListener("click", () => {
             if (!confirm("회원 탈퇴시, 모든 데이터가 삭제됩니다.\n탈퇴하시겠습니까?")) {
+                alert(document.getElementById("withdrawal").value)
                 alert("취소되었습니다.");
             } else {
-                // 회원 탈퇴 로직 추가 필요
-                alert("탈퇴되었습니다.");
-                window.location.redirect = "http://127.0.0.1:8000/"
-                // 로그아웃 후 메인 url로 이동하기
+                $.ajaxSetup({
+                    headers: { "X-CSRFToken": '{{csrf_token}}' }
+                });
+                $.ajax({
+                    url: '../user_inactivated/',
+                    method: "PUT",
+                    dataType: "json",
+                    data: document.getElementById("withdrawal").value,
+                    success: function (response) {
+                        alert("탈퇴되었습니다.");
+                        // 로그아웃 후 메인 페이지로 이동하기
+                        $.ajax({
+                            url: '../logout/',
+                            method: "GET",
+                            success: function (res){
+                                window.location.replace("http://127.0.0.1:8000/")
+                            }
+                        })
+                    },
+                    error: function (e) {
+                        alert("회원 탈퇴에 실패하였습니다.")
+                    }
+                })
             }
-
-
         })
 
 </script>
