base.html: roomRead url 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 {% url 'wroteReviews' as wroteReviews %}
 {% url 'introduction' as introduction %}
 {% url 'roomWrite' as roomWrite %}
+{% url 'roomRead' as roomRead %}
 
 <!DOCTYPE html>
 <html lang="en">
