--- a/templates/review_search.html
+++ b/templates/review_search.html
@@ -100,12 +100,12 @@
 {% endblock %}
 {% block info %}
 <div style ="border-bottom: solid 2px #B3B3B3 ; width:100%; height:10.6% ;padding:3.47% 8.854% 0.5% 6.07%;">
-	    <input type="text"style="width: 60.7%; height:100%;" placeholder="검색어 입력">
-	    <button style = "width: 5.2%; height:100%;">검</button>
+    <input type="search"style="  border-radius: 5px; width: 60.7%; height:100%;" placeholder="검색어 입력">
+	<span type ="icon" class ="icon"><i class="fa fa-search"></i></span>
 
     <div style="word-spacing:15px; float:right; ">
         <div style="display: inline-block;">
-            <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+            <select id="sort_select_box" name="sort_select_box" onchange="sort(this)">
                 <option value="1">최신 순</option>
                 {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
                 {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
@@ -119,4 +119,35 @@
         </div>
     </div>
 </div>
+    <script>
+    $("select[name=sort_select_box]").change(function(){
+        console.log($(this).val()); //value값 가져오기
+        console.log($("select[name=sort_select_box] option:selected").text()); //text값 가져오기
+        var sorted_value = $("select[name=sort_select_box] option:selected").text()
+        const URLSearch = new URLSearchParams(location.search);
+        if (URLSearch.has('sorted')) {
+            console.log("if문")
+            URLSearch.set('sorted', sorted_value)
+        }
+        else{
+            console.log("else문")
+            URLSearch.append('sorted', sorted_value)
+        }
+        console.log(URLSearch.keys())
+
+    });
+    function sort(data) {
+        console.log(data)
+        // 현재 url 가져오기
+        var link = window.location.href //
+        var search = window.location.search
+        const URLSearch = new URLSearchParams(location.search);
+        if (URLSearch.has('sorted')) {
+            URLSearch.set('sorted', data.option.value)
+        }
+        else{
+
+        }
+    }
+    </script>
 {% endblock %}
