--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -8,7 +8,7 @@
         <div id="reviews" >
         {% if paged_review %}
             {% for review in paged_review %}
-                <div class="review">
+                <div class="review" style="cursor: pointer">
                     <div class="review_image">
                         {% if review.representiveImage == 'None' %}
                             <img src="{% static 'images/' %}{{review.representiveImage}}.png">
