--- a/static/css/normalUserInfoCheckTemplate.css
+++ b/static/css/normalUserInfoCheckTemplate.css
@@ -5,11 +5,23 @@ div#others {
 input#id_user_warn_count {
   width: 40px;
 }
+#infoCheckAndUpdate {
+  margin-top: 1.7%;
+  border-bottom: 2px solid darkred;
+}
 
-#reviews_div {
-  height: 100%;
-  width: 100%;
-  overflow-y: scroll;
+#infoCheckAndUpdate > * {
+  height: 29.7%;
+  margin-left: 6.3%;
+  margin-bottom: 1.7%;
+}
+
+#retouch {
+  display: inline-block;
+}
+
+#info {
+  color: silver;
 }
 
 /*# sourceMappingURL=normalUserInfoCheckTemplate.css.map */
