--- a/static/css/normalUserInfoCheckTemplate.scss
+++ b/static/css/normalUserInfoCheckTemplate.scss
@@ -8,8 +8,21 @@ input#id_user_warn_count{
 }
 #reviews{
 }
-#reviews_div{
-    height:100%;
-    width:100%;
-    overflow-y:scroll;
+#infoCheckAndUpdate{
+    margin-top: 1.7%;
+    border-bottom:2px solid darkred;
+}
+
+#infoCheckAndUpdate > *{
+    height:29.7%;
+    margin-left: 6.3%;
+    margin-bottom: 1.7%;
+}
+
+#retouch{
+    display: inline-block;
+}
+
+#info{
+    color:silver;
 }
