--- a/static/css/normalUserInfoCheckTemplate.css
+++ b/static/css/normalUserInfoCheckTemplate.css
@@ -1,15 +1,33 @@
 div#others {
-  border: 2px solid #842029;
+  border-bottom: 2px solid #842029;
+}
+
+#reviews_div {
+  width: 100%;
+  heigth: 100%;
 }
 
 input#id_user_warn_count {
   width: 40px;
 }
 
-#reviews_div {
-  height: 100%;
-  width: 100%;
-  overflow-y: scroll;
+#infoCheckAndUpdate {
+  margin-top: 1.7%;
+  border-bottom: 2px solid darkred;
+}
+
+#infoCheckAndUpdate > * {
+  height: 29.7%;
+  margin-left: 6.3%;
+  margin-bottom: 1.7%;
+}
+
+#retouch {
+  display: inline-block;
+}
+
+#info {
+  color: silver;
 }
 
 /*# sourceMappingURL=normalUserInfoCheckTemplate.css.map */
