--- a/static/css/normalUserInfoCheckTemplate.scss
+++ b/static/css/normalUserInfoCheckTemplate.scss
@@ -1,15 +1,30 @@
 @import "color.scss";
 div#others{
-    border:2px solid $red-700;
+    border-bottom:2px solid $red-700;
+}
+#reviews_div{
+    width:100%;
+    heigth:100%;
 }
 
 input#id_user_warn_count{
     width:40px;
 }
-#reviews{
+#infoCheckAndUpdate{
+    margin-top: 1.7%;
+    border-bottom:2px solid darkred;
 }
-#reviews_div{
-    height:100%;
-    width:100%;
-    overflow-y:scroll;
+
+#infoCheckAndUpdate > *{
+    height:29.7%;
+    margin-left: 6.3%;
+    margin-bottom: 1.7%;
+}
+
+#retouch{
+    display: inline-block;
+}
+
+#info{
+    color:silver;
 }
