--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -14,7 +14,7 @@
 </script>
 {% endif %}
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
-<div id="infoCheckAndUpdate" style="height:29.7%; outline: darkred 2px solid">
+<div id="infoCheckAndUpdate">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
     <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
         {% csrf_token %}
@@ -24,9 +24,12 @@
         <div style="position:relative;display:inline-block; top:2vh; right:3.7%;float:right;">
             <button type="button">회원 탈퇴</button>
         </div>
-        <div> {# 이메일 #}
-            <span id="user_email_data">{{ user.email }}</span>
-            <span id="changeMyInfo" style="cursor: pointer; color: #A23355">수정</span>
+        <div id ="info">
+        <div style = "display: inline-block;">
+            {{ user.email }}
+        </div>
+        <div id = "retouch" >
+            <a style ="text-decoration: none; color:darkred;" href="javascript:(0)" onclick="document.getElementById('search_filter').submit();">수정</a>
         </div>
         <div>
             마지막 로그인 일시 {{ user.last_login }}
@@ -40,24 +43,25 @@
         <div>
             경고 횟수 {{ user.uWarnCount }}회
         </div>
-    </div>
+        </div>
+    </form>
+</div>
 
-{#    회원정보 입력 폼 div (hidden된 상태) #}
-    <div id="input_form" hidden>
-        <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
-            {% csrf_token %}
-            <div id="user_name"> {# 닉네임은 성,이름으로 대체 #}
-                <div id="input_user_lname">
-                    성 : <input value="{{ user.last_name }}" placeholder="성을 입력하세요">
-                </div>
-                <div id="input_user_fname">
-                    이름 : <input value="{{ user.first_name }}" placeholder="이름을 입력하세요">
-                </div>
-            </div>
-            <div> {# 이메일 #}
-                <div id="input_user_email">
-                    이메일 : <input value="{{ user.email }}" placeholder="이메일을 입력하세요">
-                </div>
+<div id="reviews_div">
+    <div id="util" style="display:block;">
+        <div style="display:flex; justify-content: right; margin: 1.7% 6.25% auto auto;">
+            <div style="display: inline-block;padding-right: 2%;">
+                <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+                    <option value="1">최신 순</option>
+                    {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+                    <option value="2">추천 순</option>
+                    {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+                    <option value="3">정확도 순</option>
+                    {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+                    {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+                </select>
             </div>
             <div>
                 <button onclick="location.href='/normal_user_review_write_page'"
@@ -95,17 +99,7 @@
     </div>
 </div>
 <script>
-    function sort(data){
-        console.log(data)
-        // 현재 url 가져오기
-        var link = window.location.href //
-        var search = window.location.search
-        const URLSearch = new URLSearchParams(location.search);
-        if(URLSearch.has('sorted')){
-            URLSearch.set('sorted', data.value)
-        }
-
-
+    function sort(){
         let selected = document.getElementById('sort_select_box');
         let a = window.location.href;
         let b = a.indexOf('sorted');
