--- a/static/css/normalUserMainTemplate.css
+++ b/static/css/normalUserMainTemplate.css
@@ -12,4 +12,8 @@ div#rightSideMenu {
   margin-bottom: 35px;
 }
 
+.img {
+  float: left;
+}
+
 /*# sourceMappingURL=normalUserMainTemplate.css.map */
