--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -25,8 +25,8 @@
                            placeholder="제목을 입력하세요">
                 </div>
                 <div style="height: 58.7%; padding-top: 2.604%">
-                    <input style="height: 100%; width: 100%; text-align:left; border-color: #B3B3B3" name="review_sentence"
-                           placeholder="리뷰 본문을 입력하세요">
+                    <div contenteditable class="fake_textarea" style="height: 100%; width: 100%; text-align:left; border-color: #B3B3B3;" id="review_sentence"></div>
+                    <input style="display:none;" name="review_sentence" id="review_sentence1">
                 </div>
                 <div style="padding-top: 3.038%">
                     <ul class="image-preview"></ul> {# 업로드한 이미지 띄우는 부분 #}
